--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "saml2",
-  "version": "1.0.0",
+  "name": "@vijhhh2/saml2js",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
